# zksnark-rs

./: Cargo.toml  README.md  shell.nix
src/: encryption.rs  lib.rs
src/field/: mod.rs  z251.rs
src/groth16/: coefficient_poly.rs  fft.rs  fr.rs  mod.rs
src/groth16/circuit/: ast.rs  dummy_rep.rs  mod.rs
src/groth16/circuit/builder/: mod.rs  tests.rs  types.rs
test_programs/: 8bit_comparator.zk  cubic_share.zk  deg_15.zk  lispesque_cubic.zk  lispesque_quad.zk  quad_share.zk  simple.zk
