[package]
name = "zksnark"
description = "An implementation of zkSNARK using groth16."
version = "0.0.2"

[dependencies]
itertools = "0.6.0"
rand = "~0.3.14"
bn = { github = "https://github.com/JoshFourie/zksnark-rs" }
bigint = "4.4.0"
crunchy = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json  = "1.0"
